--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 def Properties localProperties = new Properties()
 localProperties.load(project.rootProject.file("local.properties").newDataInputStream())
@@ -47,7 +49,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // -------------------DI (HILT)------------------------------
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+    // For instrumentation tests
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.38.1'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+    //----------------------DI (HILT)----------------------------------
     // api
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 }
