added weather app Id

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,12 @@ android {
     buildTypes {
         debug {
             buildConfigField "String", "BASE_URL", localProperties.getProperty("BASE_URL", "")
+            buildConfigField "String", "WEATHER_APP_ID", localProperties.getProperty("WEATHER_APP_ID", "")
             minifyEnabled false
         }
         release {
             buildConfigField "String", "BASE_URL", localProperties.getProperty("BASE_URL", "")
+            buildConfigField "String", "WEATHER_APP_ID", localProperties.getProperty("WEATHER_APP_ID", "")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
