--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,16 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+
+    // For local unit tests
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation 'org.mockito:mockito-core:3.4.6'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    // testImplementation for pure JVM unit tests
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
 
     // -------------------DI (HILT)------------------------------
     implementation "com.google.dagger:hilt-android:2.38.1"
