--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // support for testing with live data
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 
-    testImplementation 'org.mockito:mockito-core:3.4.6'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     // testImplementation for pure JVM unit tests
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
