--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -60,6 +65,7 @@ dependencies {
 
     testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "org.robolectric:robolectric:4.7.3"
     // testImplementation for pure JVM unit tests
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
 
